--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,8 @@ nav {
     .animate__animated.animate__fadeIn.intro-text 
     {
         font-size: 10vh;
+        height: 50vh;
+        align-items: center;
     }
 }
     
